# rp2040-vga

./: CMakeLists.txt  PROTOCOL.md  README.md  build.bat  convert_font.py  convert_pic.py  fonts.h  gui.c  gui.h  hsync.pio  main.c  rgb.pio  uart_rx.c  uart_rx.h  volz.h  vsync.pio
doc/: convert_font.py
fw/: gui.c  gui.h  main.c
generated_fonts/: fonts.h  vga_font_30.h  vga_font_40.h  vga_font_60.h
